# rudi-apps-framework

./: .gitignore  README.md  _config.yml
_unsused/shiny/: README.md
_unsused/shiny/shared/: README.md  (+3 more)
docs/: overview.md
rudi_apps/: Cargo.toml
rudi_apps/assets/: mdi_old.css  rudi_apps.css  rudi_apps_layout.css  rudi_apps_theme.css
rudi_apps/src/: lib.rs  prelude.rs
rudi_apps/src/api/: mod.rs
rudi_apps/src/components/: README.md  mod.rs
rudi_apps/src/components/checkbox/: component.rs
rudi_apps/src/components/radio_group/: style.css
rudi_apps/src/plot/: mod.rs
rudi_apps/src/plot/config/: mod.rs  series.rs  sizes.rs
rudi_apps/src/server/: config.rs  data.rs  mod.rs  state.rs  ui.rs
rudi_apps/src/server/ui/: data_package.rs  general.rs  mod.rs
rudi_apps/src/server/ui/shell/: header.rs  mod.rs
rudi_apps/src/ui/: data_package.rs  layout.rs  markdown.rs  mod.rs  tooltip.rs
rudi_apps/src/ui/layout/: app_step_page.rs  data_panel.rs  fluid_page.rs  mod.rs  rudi_card.rs
rudi_apps/src/ui/layout/panels/: display_panel.rs  input_panel.rs  mod.rs  plot_panel.rs  table_panel.rs
rudi_apps/src/ui/layout/panels/plot_panel/: mod.rs
rudi_apps/src/ui/layout/panels/plot_panel/config/: mod.rs  series.rs  sizes.rs
rudi_apps/src/ui/layout/panels/plot_panel/overlay/: mod.rs
rudi_apps/src/ui/layout/panels/plot_panel/plot/: mod.rs
rudi_apps/src/ui/rudi_elements/: mod.rs
rudi_apps/src/ui/rudi_elements/primitives/: boolean_switch.rs  mod.rs  numeric_input.rs  radio_group.rs  select.rs  select_input.rs  text_input.rs
rudi_apps/src/ui/shell/: bookmark.rs  header.rs  mod.rs
rudi_apps_framework/: Cargo.toml
rudi_apps_framework/assets/: rudi_apps_framework.css
rudi_apps_framework/src/: lib.rs  prelude.rs
shiny/: run_server.R
(+234 files in other folders)
