[package]
name = "rudi_apps"
authors = ["Thomas E. Wilson"]
edition = "2021"

[dependencies]

# dioxus web app framework
dioxus = { version = "0.7", features = ["fullstack"] }
dioxus-web = "0.7"
dioxus-icons = { version = "0.1.0", default-features = false }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

# server-only async data transfer
tokio = { version = "1", features = ["full"], optional = true}

# web-only wasm-javascript bindings
web-sys = { version = "0.3", features = ["Document", "Blob", "BlobPropertyBag", "HtmlAnchorElement", "Url", "HtmlCanvasElement"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-timers = { version = "0.4", features = ["futures"], optional = true }

# rendering
pulldown-cmark = "0.13"

# data objects for tables and plots
rlike = { git = "https://github.com/MiDataInt/rlike", branch = "main" }

# image processing
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] } 
plotters = "0.3"
plotters-canvas = "0.3"

# data transport support
toml = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
server_fn = "0.8"

# debug logging
log = "0.4"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
web     = ["dioxus/web", "dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:gloo-timers"]
server  = ["dioxus/server", "dep:tokio"]
